# carpio

./: CMakeLists.txt  README.md  carpio_define.hpp
algebra/: array_list.hpp  matrix.hpp  space.hpp
domain/: boundary.hpp  cell.hpp  domain.hpp  domain_define.hpp  grid.hpp  io_grid.hpp  node.hpp
src/: carpio_define.hpp  main.cpp
src/_test/: _test_advection.hpp  _test_boundary.hpp  _test_csv.hpp  _test_domain.hpp  _test_equation.hpp  _test_expression.hpp  _test_geometry.hpp  _test_grid.hpp  _test_grid_2D.hpp  _test_interpolate.hpp  _test_ns.hpp  _test_path.hpp  _test_poisson.hpp  _test_poisson2.hpp  _test_polygon_boolean.hpp  _test_polynomial.hpp  _test_pymodule.hpp  _test_solver.hpp  _test_stencil.hpp  _test_ts.hpp  test_advection.hpp  test_define.hpp  test_poisson.hpp
src/algebra/: BLAS_Level1.hpp  BLAS_Level2.hpp  algebra.hpp  arithmetic.hpp  array_list.hpp  matrix.hpp  matrix_SparCompCol.hpp  matrix_SparCompRow.hpp  matrix_SparCoord.hpp  polynomial.hpp  preconditioner.hpp  solver_matrix.hpp  sort.hpp  space.hpp  vector.hpp  vector_list.hpp
src/calculation/: advection.hpp  calculation_define.hpp  equation.hpp  event.hpp  expression.hpp  interpolate.cpp  interpolate.h  ns.hpp  ns2.hpp  poisson.hpp  poisson2.hpp  scalar.cpp  scalar.h  vof.h
src/domain/: adaptive.hpp  boundary.hpp  cell.hpp  data.hpp  domain.hpp  domain_define.hpp  grid.hpp  io_grid.hpp  node.hpp  path.hpp  shape.hpp  stencil.hpp
src/geometry/: _line.hpp  _plane.hpp  _point.hpp  _polygon.hpp  _polygon_boolean.hpp  _relation.hpp  _segment.hpp  geometry.hpp  geometry_define.hpp
src/io/: csv.hpp  (+10 more)
(+20 files in other folders)
